--- a/AI.ipynb
+++ b/AI.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -82,14 +82,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Provide the path to a video file.\n",
+      "  (Example: C:/Users/admin/video/video.mp4)\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "not enough values to unpack (expected 2, got 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\yoria\\no_space_folder\\JMMY-InspanningAI\\AI.ipynb Cell 5'\u001b[0m in \u001b[0;36m<cell line: 8>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/yoria/no_space_folder/JMMY-InspanningAI/AI.ipynb#ch0000004?line=3'>4</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mProvide the path to a video file.\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/yoria/no_space_folder/JMMY-InspanningAI/AI.ipynb#ch0000004?line=4'>5</a>\u001b[0m       \u001b[39m\"\u001b[39m\u001b[39m  (Example: C:/Users/admin/video/video.mp4)\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/yoria/no_space_folder/JMMY-InspanningAI/AI.ipynb#ch0000004?line=6'>7</a>\u001b[0m vid_path \u001b[39m=\u001b[39m \u001b[39minput\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mProvide a video path: \u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/yoria/no_space_folder/JMMY-InspanningAI/AI.ipynb#ch0000004?line=7'>8</a>\u001b[0m vid_name \u001b[39m=\u001b[39m get_file_name(vid_path)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/yoria/no_space_folder/JMMY-InspanningAI/AI.ipynb#ch0000004?line=8'>9</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mProvided path: \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mvid_path\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m,\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39mfound filename: \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mvid_name\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/yoria/no_space_folder/JMMY-InspanningAI/AI.ipynb#ch0000004?line=9'>10</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;32mc:\\Users\\yoria\\no_space_folder\\JMMY-InspanningAI\\AI.ipynb Cell 3'\u001b[0m in \u001b[0;36mget_file_name\u001b[1;34m(path)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/yoria/no_space_folder/JMMY-InspanningAI/AI.ipynb#ch0000002?line=2'>3</a>\u001b[0m file_name \u001b[39m=\u001b[39m path[path\u001b[39m.\u001b[39mrfind(\u001b[39m'\u001b[39m\u001b[39m/\u001b[39m\u001b[39m'\u001b[39m) \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m:]\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/yoria/no_space_folder/JMMY-InspanningAI/AI.ipynb#ch0000002?line=3'>4</a>\u001b[0m \u001b[39m# Splits out the file-type designation\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/yoria/no_space_folder/JMMY-InspanningAI/AI.ipynb#ch0000002?line=4'>5</a>\u001b[0m file_name, file_extension \u001b[39m=\u001b[39m file_name\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m.\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/yoria/no_space_folder/JMMY-InspanningAI/AI.ipynb#ch0000002?line=5'>6</a>\u001b[0m \u001b[39mreturn\u001b[39;00m file_name\n",
+      "\u001b[1;31mValueError\u001b[0m: not enough values to unpack (expected 2, got 1)"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"Ik heb geen data\"\"\"\n",
     "# Start here if no data has been generated.\n",
@@ -98,15 +119,22 @@
     "      \"  (Example: C:/Users/admin/video/video.mp4)\")\n",
     "\n",
     "vid_path = input(\"Provide a video path: \")\n",
-    "vid_name = get_file_name(vid_path)\n",
-    "print(f\"Provided path: '{vid_path}',\\nfound filename: '{vid_name}'\")\n",
-    "print(\"\")\n",
     "\n",
-    "generator = dgen.Generator(vid_path)\n",
-    "generator.generate_data()\n",
-    "print(f\"Video has been processed and exported to {generator.file_name}__trainingsData.mp4\")\n",
-    "print(f\"Data generated and exported to {generator.file_name}_trainingsData.json\")\n",
-    "print(\"\")\n",
+    "try:\n",
+    "      vid_name = get_file_name(vid_path)\n",
+    "      print(f\"Provided path: '{vid_path}',\\nfound filename: '{vid_name}'\")\n",
+    "      print(\"\")\n",
+    "except Exception as e:\n",
+    "      print(f\"Something went wrong, did you not provide a path?\\n{e}\")\n",
+    "\n",
+    "try:\n",
+    "      generator = dgen.Generator(vid_path)\n",
+    "      generator.generate_data()\n",
+    "      print(f\"Video has been processed and exported to {generator.file_name}__trainingsData.mp4\")\n",
+    "      print(f\"Data generated and exported to {generator.file_name}_trainingsData.json\")\n",
+    "      print(\"\")\n",
+    "except Exception as e:\n",
+    "      print(f\"Something went wrong, any generated data can be dismissed.\\n{e}\")\n",
     "\n",
     "try: \n",
     "      data_path = f\"generateData_OUTPUT/{vid_name}_trainingsData.json\"\n",
@@ -148,11 +176,14 @@
     "print(\"Provide the filename to a file in \"\n",
     "      \"the generateData_OUTPUT folder.\\n\"\n",
     "      \"Example: perfect_example_trainingsData\")\n",
-    "      \n",
-    "data_path = input(\"Filename: \")\n",
-    "vid_name = get_file_name(data_path)\n",
-    "data_path = f\"generateData_OUTPUT/{vid_name}.json\"\n",
-    "print(f\"Provided path: {data_path}\")\n",
+    "\n",
+    "try:\n",
+    "      data_path = input(\"Filename: \")\n",
+    "      vid_name = get_file_name(data_path)\n",
+    "      data_path = f\"generateData_OUTPUT/{vid_name}.json\"\n",
+    "      print(f\"Provided path: {data_path}\")\n",
+    "except Exception as e:\n",
+    "      print(f\"Something went wrong, did you not provide a path?\\n{e}\")\n",
     "\n",
     "try: \n",
     "      frame_data = pd.read_json(data_path, orient='index')\n",
