Making sure everything works as intended.

--- a/AI.ipynb
+++ b/AI.ipynb
@@ -12,6 +12,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Installing Dependencies\n",
+    "import install_deps as deps\n",
+    "choiche = input(\"Install Deps? (choose y to continue) \")\n",
+    "if choiche == \"y\":\n",
+    "    deps.unattended_install()\n",
+    "else:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -54,8 +69,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "is_executing": true,
+     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -85,8 +100,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "is_executing": true,
+     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -104,8 +119,8 @@
     "\n",
     "generator = dgen.Generator(vid_path)\n",
     "generator.generate_data()\n",
-    "print(f\"Video has been processed and exported to {generator.file_name}__trainingsData.mp4\")\n",
-    "print(f\"Data generated and exported to {generator.file_name}_trainingsData.json\")\n",
+    "print(f\"Video has been processed and exported to {generator.processor.file_name}__trainingsData.mp4\")\n",
+    "print(f\"Data generated and exported to {generator.processor.file_name}_trainingsData.json\")\n",
     "print(\"\")\n",
     "\n",
     "try: \n",
@@ -125,8 +140,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "is_executing": true,
+     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -135,7 +150,7 @@
     "# Start here if data has already been generated.\n",
     "print(\"Provide the filename to a file in \"\n",
     "      \"the generateData_OUTPUT folder.\\n\"\n",
-    "      \"Example: perfect_example_trainingsData\")\n",
+    "      \"Example: perfect_example_trainingsData\")2\n",
     "      \n",
     "data_path = input(\"Filename: \")\n",
     "vid_name = get_file_name(data_path)\n",
@@ -154,21 +169,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [
-    "frame_data.head()"
-   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "is_executing": true,
+     "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "frame_data.head()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "Xtemp = frame_data.drop(columns=['TS', 'HR', 'PWR', 'heartRateZone'])\n",
@@ -203,32 +225,32 @@
     "        temps[i][5] = 1\n",
     "\n",
     "print(temps)\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "outputs": [],
-   "source": [
-    "#tf.debugging.set_log_device_placement(False)"
-   ],
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "#tf.debugging.set_log_device_placement(False)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "X_train, X_test, Y_train, Y_test = train_test_split(X, temps, test_size=0.33, random_state=42)\n",
@@ -237,18 +259,17 @@
     "\n",
     "print(X_train.shape)\n",
     "print(Y_train.shape)\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "inputTensor = Input(shape=(1434,))\n",
@@ -268,137 +289,131 @@
     "\n",
     "outputTensor = Dense(6, activation='sigmoid')(hidden5)\n",
     "model = Model(inputs=inputTensor, outputs=outputTensor)"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   },
    "outputs": [],
    "source": [
     "keras.backend.clear_session()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "print(model.summary())"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "outputs": [],
-   "source": [
-    "model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])"
-   ],
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [
-    "model.fit(X_train, Y_train, epochs=150, batch_size=1000)"
-   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "is_executing": true,
+     "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "model.fit(X_train, Y_train, epochs=150, batch_size=1000)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# evaluate the keras model\n",
     "X_test = np.array(X_test)\n",
     "accuracy = model.evaluate(X_test, Y_test)\n",
     "print(accuracy)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "model.save('models/model_0.8_0.72')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "outputs": [],
-   "source": [
-    "model = keras.models.load_model('models/model_0.8_0.72')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "model = keras.models.load_model('models/model_0.8_0.72')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "display_name": "Python 3 (ipykernel)"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -410,7 +425,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
