--- a/AI.ipynb
+++ b/AI.ipynb
@@ -150,7 +150,7 @@
     "# Start here if data has already been generated.\n",
     "print(\"Provide the filename to a file in \"\n",
     "      \"the generateData_OUTPUT folder.\\n\"\n",
-    "      \"Example: perfect_example_trainingsData\")2\n",
+    "      \"Example: perfect_example_trainingsData\")\n",
     "      \n",
     "data_path = input(\"Filename: \")\n",
     "vid_name = get_file_name(data_path)\n",
@@ -178,28 +178,15 @@
    },
    "outputs": [],
    "source": [
-    "frame_data.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true,
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
+    "\"\"\"Bereid de ingeladen data voor\"\"\"\n",
+    "# Puts X and Y for the AI to train in the proper form\n",
     "Xtemp = frame_data.drop(columns=['TS', 'HR', 'PWR', 'heartRateZone'])\n",
     "Y = frame_data[\"heartRateZone\"]\n",
     "X = []\n",
     "temp = []\n",
     "\n",
-    "\n",
-    "\n",
+    "# Loop trough the different rows and append them,\n",
+    "#   to get rid of the \"list in list\" problem.\n",
     "for index, row in Xtemp.iterrows():\n",
     "    for i in range(0,478):\n",
     "        for g in range(0,3):\n",
@@ -207,6 +194,9 @@
     "    X.append(temp)\n",
     "    temp = []\n",
     "Y.to_numpy()\n",
+    "\n",
+    "# Turn the number value (1,2,3,4,5,6) in to a binary value (kinda),\n",
+    "# EXAMPLE: [0,0,1] == 3 etc.\n",
     "Y = Y.values.reshape(-1,1)\n",
     "temps = np.zeros((len(Y), 6))\n",
     "\n",
@@ -224,41 +214,16 @@
     "    elif Y[i][0] == 5:\n",
     "        temps[i][5] = 1\n",
     "\n",
-    "print(temps)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "#tf.debugging.set_log_device_placement(False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true,
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
+    "# print(temps)\n",
+    "\n",
+    "# Split the loaded and prepped data into training data and testing data.\n",
+    "# The testing data is used to evaluate th created model\n",
     "X_train, X_test, Y_train, Y_test = train_test_split(X, temps, test_size=0.33, random_state=42)\n",
     "\n",
     "X_train = np.array(X_train)\n",
     "\n",
-    "print(X_train.shape)\n",
-    "print(Y_train.shape)\n"
+    "# print(X_train.shape)\n",
+    "# print(Y_train.shape)\n"
    ]
   },
   {
@@ -272,23 +237,36 @@
    },
    "outputs": [],
    "source": [
+    "\"\"\"Maak het model voor het AI\"\"\"\n",
+    "# Make the model\n",
     "inputTensor = Input(shape=(1434,))\n",
     "layers = []\n",
     "\n",
+    "# Add all the nodes\n",
     "for i in range(0, 1434, 3):\n",
     "    layers.append(Lambda(lambda x: x[:,i: i+3], output_shape=((3,)))(inputTensor))\n",
     "for i in range(0, 478):\n",
     "    layers[i] = Dense(1)(layers[i])\n",
     "coordslayer = Concatenate()(layers)\n",
     "\n",
+    "# Define all the hidden layers\n",
     "hidden1 = Dense(477*2, activation='relu')(coordslayer)\n",
     "hidden2 = Dense(477, activation='relu')(hidden1)\n",
     "hidden3 = Dense(240, activation='relu')(hidden2)\n",
     "hidden4 = Dense(100, activation='relu')(hidden3)\n",
     "hidden5 = Dense(20, activation='relu')(hidden4)\n",
     "\n",
+    "# This is the final model:\n",
     "outputTensor = Dense(6, activation='sigmoid')(hidden5)\n",
-    "model = Model(inputs=inputTensor, outputs=outputTensor)"
+    "model = Model(inputs=inputTensor, outputs=outputTensor)\n",
+    "\n",
+    "# Show the current model:\n",
+    "print(model.summary())\n",
+    "\n",
+    "# TODO: Misschien een \"Doorgaan? (Y/N)\"\n",
+    "\n",
+    "# Compile the model so it can be used\n",
+    "model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])"
    ]
   },
   {
@@ -302,6 +280,7 @@
    },
    "outputs": [],
    "source": [
+    "# DONT RUN - Clears the model\n",
     "keras.backend.clear_session()"
    ]
   },
@@ -317,21 +296,8 @@
    },
    "outputs": [],
    "source": [
-    "print(model.summary())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])"
+    "\"\"\"Train het model\"\"\"\n",
+    "model.fit(X_train, Y_train, epochs=150, batch_size=100)"
    ]
   },
   {
@@ -346,22 +312,7 @@
    },
    "outputs": [],
    "source": [
-    "model.fit(X_train, Y_train, epochs=150, batch_size=1000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true,
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# evaluate the keras model\n",
+    "\"\"\"Evalueer het model\"\"\"\n",
     "X_test = np.array(X_test)\n",
     "accuracy = model.evaluate(X_test, Y_test)\n",
     "print(accuracy)"
@@ -395,18 +346,6 @@
    "source": [
     "model = keras.models.load_model('models/model_0.8_0.72')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
