--- a/AI.ipynb
+++ b/AI.ipynb
@@ -21,6 +21,7 @@
     "if choiche == \"y\":\n",
     "    deps.unattended_install()\n",
     "else:\n",
+    "    print(\"Skipping Deps Installer\")\n",
     "    pass"
    ]
   },
@@ -89,7 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Heb je al data?\n",
+    "#### Heb je al data?\n",
     "Als er al trainingsdata bestaat, schrijf dan simpelweg de filename bij het betreffende blok.  \n",
     "Run anders het blok waarin de data nog word gegenereerd. "
    ]
@@ -164,6 +165,14 @@
     "\n",
     "print(\"\\nTotal Table size: \")\n",
     "print(f\"Rows: {frame_data.shape[0]}, Columns: {frame_data.shape[1]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Voorbereiding\n",
+    "De ingeladen data wordt nog even voorbereid, daarna kan een model geladen worden of juist een nieuw model gecreeërd worden. "
    ]
   },
   {
@@ -272,6 +281,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"Indien je een model hebt, kun je deze inladen\"\"\"\n",
+    "print(\"Provide the path to an AI save-file.\\n\"\n",
+    "      \"  (Example: models/model_accuracy/)\")\n",
+    "\n",
+    "ai_model_path = input(\"Provide an AI path: \")\n",
+    "print(f\"Provided path: '{ai_model_path}'\")\n",
+    "print(\"\")\n",
+    "model = keras.models.load_model(ai_model_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -282,6 +307,16 @@
    "source": [
     "# DONT RUN - Clears the model\n",
     "keras.backend.clear_session()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Trainen en Evalueren\n",
+    "Bijna klaar. We trainen en evalueren het AI nu met de nieuwe data. \n",
+    "Je kunt ook telkens kiezen om het AI te trainen met andere data, door deze in te laden en voor te bereiden.  \n",
+    "Kies er dan voor om simpelweg niet het AI op te slaan of opnieuw te maken. "
    ]
   },
   {
@@ -315,7 +350,8 @@
     "\"\"\"Evalueer het model\"\"\"\n",
     "X_test = np.array(X_test)\n",
     "accuracy = model.evaluate(X_test, Y_test)\n",
-    "print(accuracy)"
+    "accuracy = round(accuracy[1], 6)\n",
+    "print(f\"Accuracy: {accuracy}\")"
    ]
   },
   {
@@ -330,21 +366,7 @@
    },
    "outputs": [],
    "source": [
-    "model.save('models/model_0.8_0.72')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "model = keras.models.load_model('models/model_0.8_0.72')"
+    "model.save(f\"models/Model_{accuracy}\")"
    ]
   }
  ],
