--- a/AI.ipynb
+++ b/AI.ipynb
@@ -56,7 +56,6 @@
     "import data_generator as dgen\n",
     "\n",
     "print(device_lib.list_local_devices())\n",
-    "tf.debugging.set_log_device_placement(False)\n",
     "#print(tf.__version__)\n",
     "#print(len(tf.config.list_physical_devices('GPU'))>0)\n",
     "\n",
@@ -5850,7 +5849,7 @@
    ],
    "source": [
     "#model saved\n",
-    "model.save('models/model3 faces')\n",
+    "model.save(f'models/model{accuracy}')\n",
     "print(\"model Saved\")"
    ],
    "metadata": {
@@ -5866,6 +5865,7 @@
    "outputs": [],
    "source": [
     "#model Loaded\n",
+    "input(\"modelname\")\n",
     "model = keras.models.load_model('models/model3 faces')\n",
     "print(\"model Loaded\")"
    ],
